--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title>Практика по Vue</title>
   </head>
-  <body>
-    <noscript>
-      <strong
-        >We're sorry but vue-practice doesn't work properly without JavaScript
-        enabled. Please enable it to continue.</strong
-      >
-    </noscript>
+  <body class="bg-main">
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
